--- a/SDP-BACKEND/HospitalManagementSpringBoot/src/main/resources/application.properties
+++ b/SDP-BACKEND/HospitalManagementSpringBoot/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=SpringBootSDPProject
-server.port=1705
+server.port=2000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqldb:3306/careconnectdb
+spring.datasource.url=jdbc:mysql://mysql-service:3306/careconnectdb
 spring.datasource.username=root
-spring.datasource.password=docker
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
